--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="nav">
+      <button class="btnGreen" id="loadCookies">Load Saved Cookies</button>
+      <button class="btnRed" id="deleteCookies">Delete Cookies</button>
+    </div>
     <h1>Cookie Clicker Game</h1>
     <p>Chocolate chip</p>
     <button id="cookieButton">Click Me!</button>
     <p id="cookieCount">Cookies: 0</p>
-    </div>
   </body>
 </html>
