--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="nav">
-      <button class="btnGreen" id="loadCookies">Load Saved Cookies</button>
-      <button class="btnRed" id="deleteCookies">Delete Cookies</button>
+      <button class="btn-green" id="loadCookies">Load Saved Cookies</button>
+      <button class="btn-red" id="deleteCookies">Delete Cookies</button>
     </div>
     <h1>Cookie Clicker Game</h1>
     <p>Chocolate chip</p>
