--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div id="nav">
       <button class="btn-green" id="loadCookies">Load Saved Cookies</button>
       <button class="btn-red" id="deleteCookies">Delete Cookies</button>
+      <button class="btn-blue" id="startInterval">Start Adding Cookies</button>
     </div>
     <h1>Cookie Clicker Game</h1>
-    <p>Chocolate chip</p>
-    <button id="cookieButton">Click Me!</button>
+    <button id="cookieButton">CLICK ME!</button>
     <p id="cookieCount">Cookies: 0</p>
+    <div id="upgradesContainer"></div>
   </body>
 </html>
